--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ KEYSTORE_PATH="keys/keystore.p12"
 KEYSTORE_PASSWORD="password"
 PRIVATE_KEY_ALIAS="mykeyalias"
 PRIVATE_KEY_PASSWORD="password"
+OUTPUT_XML_PATH_DIR="elfatooraSpecTech/"
