--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,62 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version> <!-- Or newer -->
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <!-- THIS IS THE KEY LINE -->
+                            <mainClass>org.api.APIEndpoint</mainClass>
+                            <!-- ^ Replace with your server's main class -->
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <!-- Add maven-dependency-plugin if you need a fat JAR with dependencies -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.6.1</version> <!-- Or newer -->
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/libs</outputDirectory>
+                            <!-- Include other options as needed -->
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Adjust maven-jar-plugin for classpath if using dependency plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>libs/</classpathPrefix> <!-- Point to dependency dir -->
+                            <mainClass>org.api.APIEndpoint</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
+
     <groupId>org.example</groupId>
-    <artifactId>sing_invoice</artifactId>
+    <artifactId>sign_invoice</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
